<resources>
    <string name="app_name">Sunoath</string>
    <string name="action_settings">Settings</string>
    <string name="myName">RtSunoath</string>
    <string name="movie">电影票房</string>
    <string name="picture">美女</string>
    <string name="about">关于</string>
    <string name="open">打开</string>
    <string name="close">关闭</string>
    <string name="movieName">电影名  :</string>
    <string name="rank">当前排名  :</string>
    <string name="wk">榜单周数  :</string>
    <string name="wBox">周末票房</string>
    <string name="tBox">累计票房</string>
    <string name="movieDetil">详情</string>

    <string name="load_fail">好像出问题了...=￣ω￣=</string>
    <string name="load_more">总共就这么多哟..</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
